# alibabacloud-3FS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  cleanup-pr.yaml
benchmarks/storage_bench/: CMakeLists.txt
cmake/: AddCrate.cmake  Jemalloc.cmake  Target.cmake
deploy/container/: Dockerfile  README.md  build.sh  docker-bake.hcl  erdma.acs  init.sh  strip.sh
deploy/container/chart/: Chart.yaml  values.yaml
deploy/container/chart/templates/: admin-cli.yaml  fdb.yaml  fuse.yaml  init-job.yaml  meta.yaml  mgmtd.yaml  sc.yaml  storage.yaml
deploy/container/config/: launcher.toml
deploy/container/fdb-operator/: deployment.yaml
deploy/container/fuse/: launcher.toml
deploy/container/kubernetes/: admin-cli.yaml  fdb.yaml  fuse.yaml  meta.yaml  mgmtd.yaml  storage.yaml
deploy/container/mgmtd/: app.toml  launcher.toml
patches/: folly.patch
src/analytics/: CMakeLists.txt
src/client/cli/admin/: CMakeLists.txt
src/client/mgmtd/: MgmtdClient.cc
src/common/: CMakeLists.txt
src/common/utils/: NamedAddress.cc
src/fuse/: CMakeLists.txt
src/kv/: CMakeLists.txt  KVStore.h  RocksDBStore.cc  RocksDBStore.h
src/lib/api/: CMakeLists.txt
src/meta/: CMakeLists.txt
src/storage/: CMakeLists.txt
super/: CMakeLists.txt  build.sh
tests/client/: TestMgmtdClient.cc
